--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,9 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>data1700 - oblig 1</title>
 </head>
 <body>
-
+<h1>Bestilling av kinobilletter</h1>
+<p>Velg film:</p>
+<p>Antall:</p>
+<p>Fornavn:</p>
+<p>Etternavn:</p>
+<p>Telefonnr:</p>
+<p>E-post:</p>
+<button>Kjøp billett</button>
+<h2>Alle billetter</h2>
+<button>Slett alle billettene</button>
 </body>
 </html>
