--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -11,8 +11,11 @@
     <label for="velgFilm">Velg film:
     <select id="velgFilm" onchange="velgFilm()">
         <option value="" disabled selected>Velg film her</option>
-        <option value="film 1">film 1</option>
-        <option value="film 2">film 2</option>
+        <option value="Madame Web">Madame Web</option>
+        <option value="Dune: Part Two">Dune: Part Two</option>
+        <option value="Wonka">Wonka</option>
+        <option value="Bukkene Bruse på badeland">Bukkene Bruse på badeland</option>
+
     </select>
     </label>
 </div>
